Created isSignInVisible state for the SignIn page

--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -6,6 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
     <meta name="theme-color" content="#000000" />
     <base href="%PUBLIC_URL%/" />
     <!--
@@ -26,9 +30,7 @@
     <title>StarWarsBattleArchives</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
