--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <meta name="theme-color" content="#000000" />
     <base href="%PUBLIC_URL%/" />
     <!--
